Revert 7486, make CMS default GC, move gc opts to conf/jvm.options
Patch by pmotta; reviewed by jmckenzie for CASSANDRA-10403