@@ -128,16 +128,18 @@ Function CalculateHeapSizes
     }
 
     # Validate that we need to run this function and that our config is good
-    if ($env:MAX_HEAP_SIZE)
+    if (($env:MAX_HEAP_SIZE -and !$env:HEAP_NEWSIZE) -or (!$env:MAX_HEAP_SIZE -and $env:HEAP_NEWSIZE))
     {
-        return
+        echo "Please set or unset MAX_HEAP_SIZE and HEAP_NEWSIZE in pairs.  Aborting startup."
+        exit 1
     }
 
     $memObject = Get-WMIObject -class win32_physicalmemory
     if ($memObject -eq $null)
     {
-        echo "WARNING!  Could not determine system memory.  Defaulting to 2G heap.  Manually override in conf\cassandra-env.ps1 for different heap values."
+        echo "WARNING!  Could not determine system memory.  Defaulting to 2G heap, 512M newgen.  Manually override in conf\jvm.options for different heap values."
         $env:MAX_HEAP_SIZE = "2048M"
+        $env:HEAP_NEWSIZE = "512M"
         return
     }
 
@@ -174,6 +176,20 @@ Function CalculateHeapSizes
         $maxHeapMB = $quarterMem
     }
     $env:MAX_HEAP_SIZE = [System.Convert]::ToString($maxHeapMB) + "M"
+
+    # Young gen: min(max_sensible_per_modern_cpu_core * num_cores, 1/4
+    $maxYGPerCore = 100
+    $maxYGTotal = $maxYGPerCore * $systemCores
+    $desiredYG = [Math]::Truncate($maxHeapMB / 4)
+
+    if ($desiredYG -gt $maxYGTotal)
+    {
+        $env:HEAP_NEWSIZE = [System.Convert]::ToString($maxYGTotal) + "M"
+    }
+    else
+    {
+        $env:HEAP_NEWSIZE = [System.Convert]::ToString($desiredYG) + "M"
+    }
 }
 
 #-----------------------------------------------------------------------------
@@ -294,12 +310,71 @@ Function SetCassandraEnvironment
     # Override these to set the amount of memory to allocate to the JVM at
     # start-up. For production use you may wish to adjust this for your
     # environment. MAX_HEAP_SIZE is the total amount of memory dedicated
-    # to the Java heap.
+    # to the Java heap. HEAP_NEWSIZE refers to the size of the young
+    # generation. Both MAX_HEAP_SIZE and HEAP_NEWSIZE should be either set
+    # or not (if you set one, set the other).
+    #
+    # The main trade-off for the young generation is that the larger it
+    # is, the longer GC pause times will be. The shorter it is, the more
+    # expensive GC will be (usually).
+    #
+    # The example HEAP_NEWSIZE assumes a modern 8-core+ machine for decent
+    # times. If in doubt, and if you do not particularly want to tweak, go
+    # 100 MB per physical CPU core.
 
     #$env:MAX_HEAP_SIZE="4096M"
+    #$env:HEAP_NEWSIZE="800M"
     CalculateHeapSizes
 
     ParseJVMInfo
+
+    # Read user-defined JVM options from jvm.options file
+    $content = Get-Content "$env:CASSANDRA_CONF\jvm.options"
+    for ($i = 0; $i -lt $content.Count; $i++)
+    {
+        $line = $content[$i]
+        if ($line.StartsWith("-"))
+        {
+            $env:JVM_OPTS = "$env:JVM_OPTS $line"
+        }
+    }
+
+    $defined_xmn = $env:JVM_OPTS -like '*Xmn*'
+    $defined_xmx = $env:JVM_OPTS -like '*Xmx*'
+    $defined_xms = $env:JVM_OPTS -like '*Xms*'
+    $using_cms = $env:JVM_OPTS -like '*UseConcMarkSweepGC*'
+
+    # We only set -Xms and -Xmx if they were not defined on jvm.options file
+    # If defined, both Xmx and Xms should be defined together.
+    if (($defined_xmx -eq $false) -and ($defined_xms -eq $false))
+    {
+        $env:JVM_OPTS="$env:JVM_OPTS -Xms$env:MAX_HEAP_SIZE"
+        $env:JVM_OPTS="$env:JVM_OPTS -Xmx$env:MAX_HEAP_SIZE"
+    }
+    elseif (($defined_xmx -eq $false) -or ($defined_xms -eq $false))
+    {
+        echo "Please set or unset -Xmx and -Xms flags in pairs on jvm.options file."
+        exit
+    }
+
+    # We only set -Xmn flag if it was not defined in jvm.options file
+    # and if the CMS GC is being used
+    # If defined, both Xmn and Xmx should be defined together.
+    if (($defined_xmn -eq $true) -and ($defined_xmx -eq $false))
+    {
+        echo "Please set or unset -Xmx and -Xmn flags in pairs on jvm.options file."
+        exit
+    }
+    elseif (($defined_xmn -eq $false) -and ($using_cms -eq $true))
+    {
+        $env:JVM_OPTS="$env:JVM_OPTS -Xmn$env:HEAP_NEWSIZE"
+    }
+
+    if (($env:JVM_ARCH -eq "64-Bit") -and ($using_cms -eq $true))
+    {
+        $env:JVM_OPTS="$env:JVM_OPTS -XX:+UseCondCardMark"
+    }
+
     # Add sigar env - see Cassandra-7838
     $env:JVM_OPTS = "$env:JVM_OPTS -Djava.library.path=""$env:CASSANDRA_HOME\lib\sigar-bin"""
 
@@ -355,10 +430,6 @@ Function SetCassandraEnvironment
     # see http://tech.stolsvik.com/2010/01/linux-java-thread-priorities-workar
     $env:JVM_OPTS="$env:JVM_OPTS -XX:ThreadPriorityPolicy=42"
 
-    # min and max heap sizes should be set to the same value to avoid
-    # stop-the-world GC pauses during resize.
-    $env:JVM_OPTS="$env:JVM_OPTS -Xms$env:MAX_HEAP_SIZE"
-    $env:JVM_OPTS="$env:JVM_OPTS -Xmx$env:MAX_HEAP_SIZE"
     $env:JVM_OPTS="$env:JVM_OPTS -XX:+HeapDumpOnOutOfMemoryError"
 
     # Per-thread stack size.
@@ -366,28 +437,6 @@ Function SetCassandraEnvironment
 
     # Larger interned string table, for gossip's benefit (CASSANDRA-6410)
     $env:JVM_OPTS="$env:JVM_OPTS -XX:StringTableSize=1000003"
-
-    # GC tuning options
-    # Use the Hotspot garbage-first collector.
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:+UseG1GC"
-
-    # Have the JVM do less remembered set work during STW, instead
-    # preferring concurrent GC. Reduces p99.9 latency.
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:G1RSetUpdatingPauseTimePercent=5"
-
-    # The JVM maximum is 8 PGC threads and 1/4 of that for ConcGC.
-    # Machines with > 10 cores may need additional threads. Increase to <= full cores.
-    #$env:JVM_OPTS="$env:JVM_OPTS -XX:ParallelGCThreads=16"
-    #$env:JVM_OPTS="$env:JVM_OPTS -XX:ConcGCThreads=16"
-
-    # Main G1GC tunable: lowering the pause target will lower throughput and vise versa.
-    # 200ms is the JVM default and lowest viable setting
-    # 1000ms increases throughput. Keep it smaller than the timeouts in cassandra.yaml.
-    $env:JVM_OPTS="$env:JVM_OPTS -XX:MaxGCPauseMillis=500"
-
-    # Save CPU time on large (>= 16GB) heaps by delaying region scanning
-	# until the heap is 70% full. The default in Hotspot 8u40 is 40%.
-    #$env:JVM_OPTS="$env:JVM_OPTS -XX:InitiatingHeapOccupancyPercent=70"
 
     # Make sure all memory is faulted and zeroed on startup.
     # This helps prevent soft faults in containers and makes
@@ -403,19 +452,6 @@ Function SetCassandraEnvironment
 
     # http://www.evanjones.ca/jvm-mmap-pause.html
     $env:JVM_OPTS="$env:JVM_OPTS -XX:+PerfDisableSharedMem"
-
-    # GC logging options -- uncomment to enable
-    # $env:JVM_OPTS="$env:JVM_OPTS -XX:+PrintGCDetails"
-    # $env:JVM_OPTS="$env:JVM_OPTS -XX:+PrintGCDateStamps"
-    # $env:JVM_OPTS="$env:JVM_OPTS -XX:+PrintHeapAtGC"
-    # $env:JVM_OPTS="$env:JVM_OPTS -XX:+PrintTenuringDistribution"
-    # $env:JVM_OPTS="$env:JVM_OPTS -XX:+PrintGCApplicationStoppedTime"
-    # $env:JVM_OPTS="$env:JVM_OPTS -XX:+PrintPromotionFailure"
-    # $env:JVM_OPTS="$env:JVM_OPTS -XX:PrintFLSStatistics=1"
-    # $env:JVM_OPTS="$env:JVM_OPTS -Xloggc:$env:CASSANDRA_HOME/logs/gc.log"
-    # $env:JVM_OPTS="$env:JVM_OPTS -XX:+UseGCLogFileRotation"
-    # $env:JVM_OPTS="$env:JVM_OPTS -XX:NumberOfGCLogFiles=10"
-    # $env:JVM_OPTS="$env:JVM_OPTS -XX:GCLogFileSize=10M"
 
     # Configure the following for JEMallocAllocator and if jemalloc is not available in the system
     # library path.
